[project]
name = "customer-support-env"
version = "2.0.0"
description = "OpenEnv RL environment for training customer support AI agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.4",
    "openai>=2.7.2",
    "openenv-core>=0.2.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
server = "app:app"

[tool.openenv]
name = "customer-support-env"
version = "2.0.0"